Sun Jul 17 16:55:34 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (STRIP): use proper toolchain.  based on a patch
	  from Jon Forums at [ruby-core:35909].  fixes #4617

Thu Jul 14 16:53:01 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_setjmp): need to save the stack after r2 (the Table
	  of Contents on ppc64) is saved onto the stack by getcontext().
	  based on <https://bugzilla.redhat.com/show_bug.cgi?id=628715>.
	  Bug#4411

Sun Jul  3 13:44:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_reject_bang): should not remove elements which are
	  not yielded.  [Bug #2545]

Sat Jul  2 07:17:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_reject_bang, rb_ary_delete_if): rejected
	  elements should be removed.  fixed [Bug #2545]

Wed Jun 29 23:17:57 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/openssl/ossl.h (OPENSSL_SYS_WIN32): support for mingw(msys).

Wed Jun 29 23:09:14 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tk/extconf.rb (intptr_t, uintptr_t): support for the latest ActiveTcl with mingw.

Thu Jun 16 22:55:02 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/test_securerandom.rb: Add testcase.  This testcase does NOT aim
	  to test cryptographically strongness and randomness.  It includes
	  the test for PID recycle issue of OpenSSL described in #4579 but
	  it's disabled by default.

Mon Jun 13 18:33:04 2011  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.random_bytes): modify PRNG state
	  to prevent random number sequence repeatation at forked
	  child process which has same pid.
	  reported by Eric Wong.  [ruby-core:35765]

Thu Jun  9 20:30:00 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: zone_to_diff in this version is just class method.

Thu Jun  9 19:43:57 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (time_to_day_fraction): accepts flonum without Float#to_r.
